fix: layout shift

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -52,6 +52,16 @@ p.meta {
   font-size: $font-size-base;
 }
 
+.homepage-ad {
+  height: 7.375rem;
+}
+
+@include media-breakpoint-up(md) {
+  .homepage-ad {
+    height: 6.25rem;
+  }
+}
+
 .docs-toc-ad {
   margin: 1.5rem 0;
 }
